# vera-plugin-manager

./: pyproject.toml
src/a4s_plugin_manager/: __init__.py  loader.py
src/vera_plugin_manager/: __init__.py  devpi_client.py  loader.py  utils.py  uv_client.py
