[project]
name = "vera-plugin-manager"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cli-wrapper>=0.1.0",
    "devpi-client>=7.2.1",
    "vera-plugin-interface>=0.2.2",
    "wheel-filename>=2.1.0",
]

[tool.uv.sources]
vera-plugin-interface = { git = "https://github.com/lux-ai-factory/vera-plugin-interface.git", tag = "v0.2.2" }
